
[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "slide_match"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "3.0.0"
napi-derive = "3.0.0"
anyhow = "1.0"
image = "0.25"
imageproc = "0.25"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
